<resources>
    <string name="app_name">Daipsi Search</string>
    <string name="powered_by">Powered by Digital हैं</string>
    <string name="updated_earth">Updated Earth</string>
    <string name="help">We have designed this application in very easygoing manner so that students can reach out to the results unambiguously. Answers are given in best order and adjusted with suitable examples also.</string>
    <string name="help1">How to serf the application?</string>
    <string name="help2">It is very simple. Just select your course in which you are interesting and type question in search bar and have the instant result.</string>
    <string name="help3">Share your experience and give us feedback that will help us to improve application.</string>
    <string name="developer">Developed By Digital हैं</string>

    <string name="facebook_app_id">1086100598846783</string>
    <string name="fb_login_protocol_scheme">fb1086100598846783</string>


    <string name="default_notification_channel_id">notification_id_101</string>
    <string name="dummy_paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.\n\nSed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?</string>
</resources>