<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bg"
    android:padding="8dp"
    tools:context=".Activities.HelpActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Help"
        android:textStyle="bold"
        android:textColor="@color/purple_700"
        android:textSize="25dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"/>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:padding="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:textColor="@color/purple_500"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/help" />

            <TextView
                android:layout_marginTop="10dp"
                android:textColor="@color/purple_500"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/help1" />

            <TextView
                android:layout_marginTop="10dp"
                android:textColor="@color/purple_500"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/help2" />

            <TextView
                android:layout_marginTop="10dp"
                android:textColor="@color/purple_500"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/help3" />

            <TextView
                android:layout_marginTop="10dp"
                android:textColor="@color/purple_500"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/help4" />

            <TextView
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:textColor="@color/purple_700"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/developer" />


        </LinearLayout>


    </androidx.core.widget.NestedScrollView>


</LinearLayout>